	  filter.(c|h), folder.c, indep-include/support.h, doc/amiga/SimpleMail.guide:
	  Added three new options for the filterrules: "Substring", "Case sensitive"
	  and "Pattern". The last option is especially for Chris Handley (fixes
	  bug #1425069).
	  The pattern in the search window will be interpreted with "Substring" and
	  "Pattern" set (not yet configurable).

2007-02-02  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Added a SORT[12]MASK for the column flags.
	  The NoRecipient image will only be shown in a send-folder (as it was before).
	  Added the MUIA_MailTreelist_TitleClick2 for the secondary sort when shift-clicked
	  in the title row.
	  Corrected the parameter for the MUIM_DrawBackground calls.
	  Corrected the DrawEntry() call when not in bufferd drawing mode.
	  Added special truncation for the subject column.
	* amiga-mui/mainwnd.c: Added the MUIA_MailTreelist_TitleClick2 for the secondary
	  sort when shift-clicked in the title row.
	* folder.(c|h): Need the mail_get_compare_subject() function for the new subject
	  truncation in the mailtreelistclass-new.

2007-01-31  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/gui_main.c: The TTEngine library wasn't closed.

2007-01-29  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: The marker was drawn wrong.

2007-01-28  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/configwnd.c, amiga-mui/gui_main.c, configuration.(c|h), 
	  doc/amiga/SimpleMail.guide, indep-include/configwnd.h, simplemail.c:
	  Added a new config option "Folder to display at startup".
	* amiga-mui/mailtreelistclass-new.c: Added newmouse wheel standard support.
	  The list is now using the standard list font setting from mui "Listviews".
	  The TileMarker is now considered in the calculation of the titlecolumnwidth and
	  the rendering of the titletext.
	  Added the display of the secondary sort (MUIA_MailTreelist_TitleMarker2).